// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Box default render 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<Box
  display="flex"
>
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<div
    className="c0"
    display="flex"
  />
</Box>
`;

exports[`Box should pass event handlers 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<Box
  display="flex"
  onClick={[Function]}
>
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<div
    className="c0"
    display="flex"
    onClick={[Function]}
  />
</Box>
`;
